fit jdk1.8 to jdk1.7